css/others_for_adapted_pages.scss
/* ... */
// COURSES PAGE

.courses_page {
	.heading {
		margin-bottom: 0;
	}


	.container + .container {
		margin-top: 30px;
		padding-top: 30px;
		border-top: 1px solid #eee;

		.course_card {
			pointer-events: none;
		}
	}
}



//

#about_project {
	padding-top: 0;

	.container {
		margin: 0 auto;

		p {
			max-width: 64vw;
		}

		ul li {
			max-width: 650px;
		}
	}

	article {
		border-bottom: 1px solid #eee;
		padding-bottom: 50px;
		max-width: 100vw!important;
		&:last-child {
			border-bottom: 0;
		}
	}

	.h2 {
		margin: 50px 0 10px;
		text-align: left;
	}

	.h3 {
		margin: 10px 0 10px;
		text-align: left;
		font-weight: bold;
		font-size: 1em!important;
	}


	.h2+.h3 {
		margin-top: 20px;
	}

	p+.h3 {
		margin-top: 40px;
	}
}
// MODAL

.modal {
	position: fixed;
	top: 60px;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: #fff;
	background-color: rgba(0,0,0,.8);
	z-index: 99;
	display: none;

	.modal_content {
		width: 600px;
		height: 400px;
		position: absolute;
		top: 50%;
		left: 50%;
		margin: -200px 0 0 -300px;
		background-color: #fff;
		box-shadow: 0 2px 1px rgba(34, 25, 25, 0.1);
	}

	.close {
		display: block;
		position: absolute;
		top: 20px;
		right: 20px;
		width: 17px;
		height: 17px;
		background-image: url("../img/close.png");
		background-repeat: no-repeat;
		background-size: 17px;
		cursor: pointer;
	}

	.video {
		width: 560px;
		height: 315px;
		position: absolute;

		right: 20px;
		bottom: 20px;
		left: 20px;
	}
}

// PLAY ANIMATION

@keyframes scale-animation {
		0%     { transform: scale(1); } /* 0ms initial values */
		10%  { transform: scale(1.15); }     /* 150ms half of animation */
		20% { transform: scale(1); }     /* 2150ms still at half of animation */
		30% { transform: scale(1.15); } /* 2300ms back to initial */
		40%   { transform: scale(1); } /* 6300ms still at initial */
		100%   { transform: scale(1); }
	}

	.button.play {
		animation-name: scale-animation;
		animation-iteration-count: infinite;
		animation-direction: alternate;
		animation-duration: 3300ms;
		animation-delay: 2s;
	}

// RESPONSIVE VIDEO
.virtual-project {
}

.video {
	position: relative;
}


.video-wrapper {
	height: 0;
	overflow: hidden;
	padding-bottom: 56.25%; // For ratio 16:9. 75% if ratio is 4:3
	position: relative;

	embed,
	object,
	iframe {
		@include position(absolute, 0 null null 0);
		@include size(100%);
	}
}

// FUNDRAISING PAGE

#fundraising_heading {
	.button.orange {
		background-color: orange;
		color: white;
		border-color: orange;
		text-transform: none;
		font-weight: bold;
		font-size: 16px;
		line-height: 22px;
	}
}

#fundraising_project {
	.h2 {
		text-transform: none;
		color: orange;
		font-weight: bold;
	}
	.section {
		.container {
		}
	}
	.two_column {
		display: flex;
		.item {
			width: 50%;
			margin: auto;
		}
	}
	.button.orange {
		background-color: orange;
		color: white;
		border-color: orange;
		text-transform: none;
		font-weight: bold;
		font-size: 16px;
		margin-top: 25px;
		line-height: 22px;
	}
}

//CARDS' STYLES

.mymy{
	display: flex;
	align-items: center;
	justify-content: center;
}
	
.member-card:hover{
	transform: translateY(20px);
}

.member-card:hover::before{
	opacity: 1;
}

.member-card:hover .info{
	opacity: 1;
	transform: translateY(0px);
}
.member-card:before{
	content: "";
	position: absolute;
	top: 0;
	left: 0;
	display: block;
	width: 100%;
	height: 100%;
	background: rgba(0, 0, 0, 0.6);
	z-index: 2;
	transition: 0.5s;
	opacity: 0;
}

.member-card{
	width: 240px;
	height: 340px;
	padding: 1.5rem;
	background: white;
	position: relative;
	display: flex;
	align-items: center;
	transition: 0.4s ease-out;
	box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.5);
	}
.img{
	width: 100%;
	height: 100%;
	object-fit: cover;
	position: absolute;
	top: 0;
	left: 0;
}

.info{
	position: relative;
	z-index: 3;
	color: white;
	opacity: 0;
	transform: translateY(30px);
	transition: 0.5s;
}
	
.name{
	text-align: left;
	color: #EFA72D;
	margin: 0px;
}
.job-descr{
	letter-spacing: 1px;
	margin-top: 8px;
	text-align: left;
	font-size: 12px;
    line-height: 1.3;
}

.job{
	font-style: italic;
	font-size: 20px;
	text-align: left;
}

.video-wraper .video-block figure a img{
	width: 68vw;
}
// END OF CARDS' STYLES


// ZNO-BUTTON 

.highlight {
	background: url("../img/test-zno-button.png");
	background-repeat: no-repeat;
	background-size: 100% 95%;
	padding: 8px 0;
}

// END OF ZNO-BUTTON

